--- a/src/main/resources/assets/mcmessage/lang/ru_ru.json
+++ b/src/main/resources/assets/mcmessage/lang/ru_ru.json
@@ -1,5 +1,7 @@
 {
   "key.mcmessage.open": "Открыть Меню Сообщений",
-  "text.mcmessage.says_you": "%s говорит Вам:",
-  "text.mcmessage.open": "%s, чтобы открыть"
+  "text.mcmessage.says_you": "%s пишет Вам:",
+  "text.mcmessage.open": "%s, чтобы открыть",
+  "category.mcmessage.main": "MCMessage",
+  "text.mcmessage.outgoing_msg": "Вы написали %s: %s"
 }
